backend de login pronto

--- a/project/.env
+++ b/project/.env
@@ -3,4 +3,6 @@ MONGO_URI=mongodb+srv://Foca:projetofoca@clusterfoca.wraevdy.mongodb.net/?retryW
 JWT_SECRET=rober122_projectfoca_ods4_faculdade
 
 EMAIL_USER=focaofical@gmail.com
-EMAIL_PASS=projetofocainovacao
+EMAIL_PASS=xsvu dqpb stom xadq
+
+CLIENT_URL=http://127.0.0.1:5500
