--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "nodemailer": "^6.10.1"
   },
   "description": ""
 }
