--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT=4000
+PORT=3000
 MONGO_URI=mongodb+srv://Foca:projetofoca@clusterfoca.wraevdy.mongodb.net/?retryWrites=true&w=majority&appName=ClusterFoca
 JWT_SECRET=rober122_projectfoca_ods4_faculdade
 
 EMAIL_USER=focaofical@gmail.com
 EMAIL_PASS=xsvu dqpb stom xadq
 
-CLIENT_URL=vigilant-fishstick-4x5p4vqr95jcjpr6-3000.app.github.dev
+CLIENT_URL=https://foca.onrender.com
