--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "project/server.js",
   "scripts": {
     "start": "node project/server.js",
+    "dev": "nodemon project/server.js",
     "seed:badges": "node project/scripts/seedBadge.js",
     "grant:badges": "node project/scripts/grantBadgeToUser.js",
     "token": "node project/scripts/generateTokensTest.js"
